[#3] log endpoint improvements
* include connection info in activity log event

* include timestamp of when event was received

* transform the consistency level from ordinal to its string value

* move tests into ActivityLogIntegrationTest

* add a query parameter for filtering query logs based on whether or not
  they were for primed requests.

* move ActivityLog http controllers from QueryManager into
  ActivityLogyManager.
